--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,8 @@
-<form action="???" data-turbo="false">
-  <input type="text" name="???">
-  <input type="submit" value="Ask!">
+<h1>Stupid Coaching</h1>
+
+<p>Hello, I am your coach, what did you want to tell me?</p>
+
+<form action="/answer" data-turbo="false">
+  <input type="text" name="question">
+  <input type="submit" value="Ask">
 </form>
