--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,6 +1,19 @@
-<p><%=@question%></p>
-<p><%=@answer %></p>
+<h1>Stupid Coaching</h1>
 
+<blockquote>
+  <p>
+    <% if @question.blank? %>
+      😶
+    <% else %>
+      <%= @question %>
+    <% end %>
+  </p>
+  <cite>You</cite>
+</blockquote>
 
+<blockquote class="coach">
+  <p><%= @answer %></p>
+  <cite>Your coach</cite>
+</blockquote>
 
-<%= link_to "Ask a new question", answer_path %>
+<%= link_to "Ask a new question", ask_path %>
