--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,8 +1,15 @@
-<h1>Stupid Coaching</h1>
 
-<p>Hello, I am your coach, what did you want to tell me?</p>
 
-<form action="/answer" data-turbo="false">
-  <input type="text" name="question">
-  <input type="submit" value="Ask">
-</form>
+
+<div class="container">
+  <h1>Stupid Coaching</h1>
+
+  <p>Ask your coach anything:</p>
+
+  <form action="/answer">
+    <div class="input-group">
+      <input type="text" name="question" class="form-control">
+      <input type="submit" value="Ask" class="btn btn-primary">
+    </div>
+  </form>
+</div>
